# diplomski

./: README.md
dclient/: CMakeLists.txt  application.c  buttons.c  buttons.h  client_doxywizard  common.h  drawing.c  drawing.h  functions.c  functions.h  interrupts.h  main.c  main_header.h  testing.c  testing.h  testing_tree.c  testing_tree.h  top.data  window.c  window.h  writting.c  writting.h
dclient/html/: globals.html  globals_func.html  main_8c.html  main_8c__incl.dot  main_8c__incl.md5  struct_cpu___list.html  struct_cpu___list__coll__graph.md5  struct_device___collection.html  struct_device___collection__coll__graph.md5  struct_interrupt___collection.html  struct_interrupt___collection2.html  struct_interrupt___collection__coll__graph.dot  struct_mega___data.html  struct_mega___data__coll__graph.dot  struct_mega___data__coll__graph.md5  struct_net_mem__list.html  struct_net_mem__list__coll__graph.dot  struct_net_mem__list__coll__graph.md5  struct_task___collection.html  testing__tree_8c_source.html  union_unification.html  window_8c_source.html
dclient/latex/: files.tex  main_8c.tex  main_8c.tex.tmp  main_8c__incl.dot  main_8c__incl.md5  struct_cpu___list.tex  struct_device___collection.tex  struct_device___collection__coll__graph.dot  struct_interrupt___collection.tex  struct_interrupt___collection2.tex  struct_mega___data.tex  struct_mega___data__coll__graph.dot  struct_mega___data__coll__graph.md5  struct_net_mem__list.tex  struct_net_mem__list__coll__graph.dot  struct_task___collection.tex  struct_task___collection__coll__graph.dot  union_unification.tex  (+1 more)
dserver/: CMakeLists.txt  common.h  cpu_usage.c  cpu_usage.h  devices.c  devices.h  functions.c  functions.h  interrupts.c  interrupts.h  main.c  memory_usage.c  memory_usage.h  network_bandwith.c  network_bandwith.h  task_manager.c  task_manager.h  testing.c  testing.h  time_managment.h
(+535 files in other folders)
